Revert "Measure response sizes"
This reverts commit 2d4d5fcf797a2ad89b5176c4da8d3ce352de0c8b.